--- a/src/main-scss/home.scss
+++ b/src/main-scss/home.scss
@@ -75,9 +75,7 @@ body.home {
 	#home-main {
 		position: absolute;
 		left:0; right:0;
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
+		@include flexbox(row, center, center);
 		&.hastabs {
 			margin-top: 26px;
 		}
